--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>My First Web Page</title>
 </head>
 <body>
-    <h1>Hi! I am [Your Name]</h1>
+    <h1>Hi! I am Vern Dayoc</h1>
 </body>
 </html>
