clickable texts for tours

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Hi! I am Vern Dayoc</h1>
     <h2>HTML Tasks</h2>
+    <p>&emsp; <a href="DayocExplorePHTours.html">1. Explore PH Tours</a></p>
 </body>
 </html>
