--- a/DayocExplorePHTours.html
+++ b/DayocExplorePHTours.html
@@ -2,9 +2,78 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Explore PH Tours</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Explore PH Tours</title>
+    <link rel="stylesheet" href="effects.css">
 </head>
 <body>
-    <h1>Explore PH Tours Landing Page</h1>
+
+    <header>
+        <img src="placeholder-logo.png" alt="Explore PH Tours Logo">
+        <h1>Explore PH Tours</h1>
+        <p>Your Gateway to the Philippines!</p>
+    </header>
+
+    <nav>
+        <a href="index.html">Home<a></a>
+        <a href="#services">Services</a>
+        <a href="#promos">Promos</a>
+        <a href="#contact">Contact</a>
+    </nav>
+
+    <main>
+        <section id="services">
+            <h2>Our Services</h2>
+            <ul>
+                <li>Island Hopping Tours</li>
+                <li>Guided City Tours</li>
+                <li>Mountain Trekking Packages</li>
+                <li>Hotel and Transport Reservations</li>
+                <li>Customized Travel Itineraries</li>
+            </ul>
+        </section>
+
+        <section id="promos">
+            <h2>Special Promos</h2>
+            <ul>
+                <li>"3+1 Free" group packages.</li>
+                <li>20% discount on bookings made at least a month in advance.</li>
+                <li>Special weekend rates for island hopping in Cebu.</li>
+            </ul>
+        </section>
+
+        <section id="popular-packages">
+            <h2>Popular Packages</h2>
+            <ul>
+                <li>Manila: Historic Intramuros Tour with Food Crawl</li>
+                <li>Cebu: Whale Shark Watching and Kawasan Falls Adventure</li>
+                <li>Davao: Mt. Apo Climbing Experience</li>
+            </ul>
+        </section>
+
+        <section class="cta">
+            <h2>Book Your Next Adventure Today!</h2>
+            <p>Explore the Philippines like never before with our exciting packages. Limited slots available for promo deals. Don't miss out!</p>
+            <button onclick="alert('Booking form coming soon!')">Book Now</button>
+        </section>
+
+        <section id="contact">
+            <h2>Contact Us</h2>
+            <p>Manila: (+63) 123-4567</p>
+            <p>Cebu: (+63) 234-5678</p>
+            <p>Davao: (+63) 345-6789</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>Follow us on:</p>
+        <p>
+            <a href="#">Facebook</a> |
+            <a href="#">Twitter</a> |
+            <a href="#">Instagram</a>
+        </p>
+        <p>&copy; 2024 Explore PH Tours. All rights reserved.</p>
+    </footer>
+
 </body>
 </html>
