--- a/DayocExplorePHTours.html
+++ b/DayocExplorePHTours.html
@@ -15,7 +15,7 @@
     </header>
 
     <nav>
-        <a href="index.html">Home<a></a>
+        <a href="index.html">Home</a>
         <a href="#services">Services</a>
         <a href="#promos">Promos</a>
         <a href="#contact">Contact</a>
