--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Explore PH Tours</title>
+    <title>Services - Explore PH Tours</title>
     <link rel="stylesheet" href="effects.css">
 </head>
 <body>
@@ -32,37 +32,6 @@
                 <li>Hotel and Transport Reservations</li>
                 <li>Customized Travel Itineraries</li>
             </ul>
-        </section>
-
-        <section id="promos">
-            <h2>Special Promos</h2>
-            <ul>
-                <li>"3+1 Free" group packages.</li>
-                <li>20% discount on bookings made at least a month in advance.</li>
-                <li>Special weekend rates for island hopping in Cebu.</li>
-            </ul>
-        </section>
-
-        <section id="popular-packages">
-            <h2>Popular Packages</h2>
-            <ul>
-                <li>Manila: Historic Intramuros Tour with Food Crawl</li>
-                <li>Cebu: Whale Shark Watching and Kawasan Falls Adventure</li>
-                <li>Davao: Mt. Apo Climbing Experience</li>
-            </ul>
-        </section>
-
-        <section class="cta">
-            <h2>Book Your Next Adventure Today!</h2>
-            <p>Explore the Philippines like never before with our exciting packages. Limited slots available for promo deals. Don't miss out!</p>
-            <button onclick="alert('Booking form coming soon!')">Book Now</button>
-        </section>
-
-        <section id="contact">
-            <h2>Contact Us</h2>
-            <p>Manila: (+63) 123-4567</p>
-            <p>Cebu: (+63) 234-5678</p>
-            <p>Davao: (+63) 345-6789</p>
         </section>
     </main>
 
