--- a/DayocExplorePHTours.html
+++ b/DayocExplorePHTours.html
@@ -23,47 +23,14 @@
     </nav>
 
     <main>
-        <section id="services">
-            <h2>Our Services</h2>
-            <ul>
-                <li>Island Hopping Tours</li>
-                <li>Guided City Tours</li>
-                <li>Mountain Trekking Packages</li>
-                <li>Hotel and Transport Reservations</li>
-                <li>Customized Travel Itineraries</li>
-            </ul>
-        </section>
-
-        <section id="promos">
-            <h2>Special Promos</h2>
-            <ul>
-                <li>"3+1 Free" group packages.</li>
-                <li>20% discount on bookings made at least a month in advance.</li>
-                <li>Special weekend rates for island hopping in Cebu.</li>
-            </ul>
-        </section>
-
-        <section id="popular-packages">
-            <h2>Popular Packages</h2>
-            <ul>
-                <li>Manila: Historic Intramuros Tour with Food Crawl</li>
-                <li>Cebu: Whale Shark Watching and Kawasan Falls Adventure</li>
-                <li>Davao: Mt. Apo Climbing Experience</li>
-            </ul>
-        </section>
-
-        <section class="cta">
-            <h2>Book Your Next Adventure Today!</h2>
-            <p>Explore the Philippines like never before with our exciting packages. Limited slots available for promo deals. Don't miss out!</p>
-            <button onclick="alert('Booking form coming soon!')">Book Now</button>
-        </section>
-
-        <section id="contact">
-            <h2>Contact Us</h2>
-            <p>Manila: (+63) 123-4567</p>
-            <p>Cebu: (+63) 234-5678</p>
-            <p>Davao: (+63) 345-6789</p>
-        </section>
+        Explore PH Tours prides itself on being the gateway to unforgettable adventures across the Philippines.
+        Whether travelers are seeking pristine beaches, bustling cityscapes, or serene mountain escapes, the
+        company curates experiences tailored to every preference. With branches strategically located in Manila,
+        Cebu, and Davao, Explore PH Tours ensures easy access to the most sought-after destinations across
+        Luzon, Visayas, and Mindanao. Their services include guided city tours, island-hopping adventures,
+        mountain trekking packages, and customized travel itineraries that allow customers to explore the unique
+        beauty of the Philippines in comfort and style. They also offer hotel and transport reservations, making trip
+        planning seamless and hassle-free.
     </main>
 
     <footer>
