--- a/services.html
+++ b/services.html
@@ -12,6 +12,7 @@
         <img src="placeholder-logo.png" alt="Explore PH Tours Logo">
         <h1>Explore PH Tours</h1>
         <p>Maka-Diyos, Maka-tao, Makakalikasan at Makabansa</p>
+        <p>Services</p>
     </header>
 
     <nav>
@@ -26,10 +27,10 @@
         <section id="services">
             <h2>Our Services</h2>
             <ul>
-                <li>Island Hopping Tours</li>
-                <li>Guided City Tours</li>
-                <li>Mountain Trekking Packages</li>
-                <li>Hotel and Transport Reservations</li>
+                <li>Mahal Ko Tours</li>
+                <li>Iniwan Tara Na Tours</li>
+                <li>Emotional Packages</li>
+                <li>Plus One Reservations</li>
                 <li>Customized Travel Itineraries</li>
             </ul>
         </section>
