--- a/DayocExplorePHTours.html
+++ b/DayocExplorePHTours.html
@@ -12,6 +12,7 @@
         <img src="placeholder-logo.png" alt="Explore PH Tours Logo">
         <h1>Explore PH Tours</h1>
         <p>Maka-Diyos, Maka-tao, Makakalikasan at Makabansa</p>
+        <p>Explore PH Tours</p>
     </header>
 
     <nav>
