--- a/promos.html
+++ b/promos.html
@@ -12,6 +12,7 @@
         <img src="placeholder-logo.png" alt="Explore PH Tours Logo">
         <h1>Explore PH Tours</h1>
         <p>Maka-Diyos, Maka-tao, Makakalikasan at Makabansa</p>
+        <p>Promos</p>
     </header>
 
     <nav>
@@ -25,8 +26,8 @@
     <section id="promos">
         <h2>Special Promos</h2>
         <ul>
-            <li>"3+1 Free" group packages.</li>
-            <li>20% discount on bookings made at least a month in advance.</li>
+            <li>"Together with my AFAMS" group packages.</li>
+            <li>50% discount on bookings made at least a month in advance.</li>
             <li>Special weekend rates for island hopping in Cebu.</li>
         </ul>
     </section>
