--- a/DayocExplorePHTours.html
+++ b/DayocExplorePHTours.html
@@ -24,14 +24,25 @@
     </nav>
 
     <main>
-        Explore PH Tours prides itself on being the gateway to unforgettable adventures across the Philippines.
-        Whether travelers are seeking pristine beaches, bustling cityscapes, or serene mountain escapes, the
-        company curates experiences tailored to every preference. With branches strategically located in Manila,
-        Cebu, and Davao, Explore PH Tours ensures easy access to the most sought-after destinations across
-        Luzon, Visayas, and Mindanao. Their services include guided city tours, island-hopping adventures,
-        mountain trekking packages, and customized travel itineraries that allow customers to explore the unique
-        beauty of the Philippines in comfort and style. They also offer hotel and transport reservations, making trip
-        planning seamless and hassle-free.
+        <header id="yellow_bg">
+            <p>
+                Explore PH Tours prides itself on being the gateway to unforgettable adventures across the Philippines.
+                Whether travelers are seeking pristine beaches, bustling cityscapes, or serene mountain escapes, the
+                company curates experiences tailored to every preference. With branches strategically located in Manila,
+                Cebu, and Davao, Explore PH Tours ensures easy access to the most sought-after destinations across
+                Luzon, Visayas, and Mindanao. Their services include guided city tours, island-hopping adventures,
+                mountain trekking packages, and customized travel itineraries that allow customers to explore the unique
+                beauty of the Philippines in comfort and style. They also offer hotel and transport reservations, making trip
+                planning seamless and hassle-free.
+            </p>
+        </header>
+
+        <header id="yellow_bg">
+            <h2>Book your next adventure with us today!</h2>
+            <p>Limited slots available for promo packages.</p>
+            <button onclick="alert('Booking form coming soon!')">Book Now</button>
+        </header>                
+        
     </main>
 
     <footer>
