--- a/promos.html
+++ b/promos.html
@@ -23,11 +23,11 @@
         <a href="contact.html">Contact</a>
     </nav>
 <main>
-    <section id="promos">
+    <section id="yellow_bg">
         <h2>Special Promos</h2>
         <ul>
-            <li>"Together with my AFAMS" group packages.</li>
-            <li>50% discount on bookings made at least a month in advance.</li>
+            <li>"3+1 Free" group packages.</li>
+            <li>20% discount on bookings made at least a month in advance.</li>
             <li>Special weekend rates for island hopping in Cebu.</li>
         </ul>
     </section>
