--- a/services.html
+++ b/services.html
@@ -21,21 +21,20 @@
         <a href="DayocExplorePHTours.html">Explore PH Tours</a>
         <a href="promos.html">Promos</a>
         <a href="contact.html">Contact</a>
+        <a href="packages.html">Packages</a>
     </nav>
 
     <main>
-        <section id="services">
+        <section id="yellow_bg">
             <h2>Our Services</h2>
             <ul>
-                <li>Mahal Ko Tours</li>
-                <li>Iniwan Tara Na Tours</li>
-                <li>Emotional Packages</li>
-                <li>Plus One Reservations</li>
+                <li>Island Hopping Tours</li>
+                <li>Guided City Tours</li>
+                <li>Mountain Trekking Packages</li>
+                <li>Hotel and Transport Reservations</li>
                 <li>Customized Travel Itineraries</li>
             </ul>
         </section>
-    </main>
-
     <footer>
         <p>Follow us on:</p>
         <p>
