--- a/packages.html
+++ b/packages.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Explore PH Tours</title>
+    <title>Packages - Explore PH Tours</title>
     <link rel="stylesheet" href="effects.css">
 </head>
 <body>
 
     <header>
-        <img src="Logo/Logo Explore.png" alt="Explore PH Tours Logo">
+        <img src="placeholder-logo.png" alt="Explore PH Tours Logo">
         <h1>Explore PH Tours</h1>
         <p>Maka-Diyos, Maka-tao, Makakalikasan at Makabansa</p>
-        <p>Contact</p>
+        <p>Packages</p>
     </header>
 
     <nav>
@@ -26,12 +26,11 @@
 
     <main>
         <section id="yellow_bg">
-            <h2>Contact Us</h2>
-            <p>Reach out to us at the following branches:</p>
+            <h2>Popular Packages</h2>
             <ul>
-                <li>Manila: (+63) 123-4567</li>
-                <li>Cebu: (+63) 234-5678</li>
-                <li>Davao: (+63) 345-6789</li>
+                <li>Manila: Historic Intramuros Tour with Food Crawl</li>
+                <li>Cebu: Whale Shark Watching and Kawasan Falls Adventure</li>
+                <li>Davao: Mt. Apo Climbing Experience</li>
             </ul>
         </section>
     </main>
