--- a/packages.html
+++ b/packages.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <img src="placeholder-logo.png" alt="Explore PH Tours Logo">
+        <img src="Logo/Logo Explore.png" alt="Explore PH Tours Logo">
         <h1>Explore PH Tours</h1>
         <p>Maka-Diyos, Maka-tao, Makakalikasan at Makabansa</p>
         <p>Packages</p>
@@ -20,8 +20,9 @@
         <a href="services.html">Services</a>
         <a href="DayocExplorePHTours.html">Explore PH Tours</a>
         <a href="promos.html">Promos</a>
-        <a href="contact.html">Contact</a>
         <a href="packages.html">Packages</a>
+        <a href="contact.html">Contact</a>
+        
     </nav>
 
     <main>
