--- a/DayocExplorePHTours.html
+++ b/DayocExplorePHTours.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <img src="placeholder-logo.png" alt="Explore PH Tours Logo">
+        <img src="Logo/Logo Explore.png" alt="Explore PH Tours Logo">
         <h1>Explore PH Tours</h1>
         <p>Maka-Diyos, Maka-tao, Makakalikasan at Makabansa</p>
         <p>Explore PH Tours</p>
@@ -20,7 +20,9 @@
         <a href="services.html">Services</a>
         <a href="DayocExplorePHTours.html">Explore PH Tours</a>
         <a href="promos.html">Promos</a>
+        <a href="packages.html">Packages</a>
         <a href="contact.html">Contact</a>
+        
     </nav>
 
     <main>
@@ -35,9 +37,7 @@
                 beauty of the Philippines in comfort and style. They also offer hotel and transport reservations, making trip
                 planning seamless and hassle-free.
             </p>
-        </header>
-
-        <header id="yellow_bg">
+            
             <h2>Book your next adventure with us today!</h2>
             <p>Limited slots available for promo packages.</p>
             <button onclick="alert('Booking form coming soon!')">Book Now</button>
