--- a/packages.html
+++ b/packages.html
@@ -11,7 +11,7 @@
     <header>
         <img src="Logo/Logo Explore.png" alt="Explore PH Tours Logo">
         <h1>Explore PH Tours</h1>
-        <p>Maka-Diyos, Maka-tao, Makakalikasan at Makabansa</p>
+        <p>Your Gateway to the Philippines!</p>
         <p>Packages</p>
     </header>
 
