--- a/DayocExplorePHTours.html
+++ b/DayocExplorePHTours.html
@@ -11,7 +11,7 @@
     <header>
         <img src="Logo/Logo Explore.png" alt="Explore PH Tours Logo">
         <h1>Explore PH Tours</h1>
-        <p>Maka-Diyos, Maka-tao, Makakalikasan at Makabansa</p>
+        <p>Your Gateway to the Philippines!</p>
         <p>Explore PH Tours</p>
     </header>
 
@@ -37,7 +37,7 @@
                 beauty of the Philippines in comfort and style. They also offer hotel and transport reservations, making trip
                 planning seamless and hassle-free.
             </p>
-            
+
             <h2>Book your next adventure with us today!</h2>
             <p>Limited slots available for promo packages.</p>
             <button onclick="alert('Booking form coming soon!')">Book Now</button>
