new tasks and renamed formats

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Hi! I am Vern Dayoc</h1>
     <h2>HTML Tasks</h2>
     <p>&emsp; <a href="DayocExplorePHTours.html">1. Explore PH Tours</a></p>
+    <p>&emsp; <a href="DayocCourseSchedule.html">1. 2nd Term Course Schedule</a></p>
 </body>
 </html>
