--- a/packages.html
+++ b/packages.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Packages - Explore PH Tours</title>
-    <link rel="stylesheet" href="effects.css">
+    <link rel="stylesheet" href="PHToursFormat.css">
 </head>
 <body>
 
