--- a/DayocCourseSchedule.html
+++ b/DayocCourseSchedule.html
@@ -24,7 +24,7 @@
         </thead>
         <tbody>
             <tr>
-                <td>7:00 AM<br>8:15 AM</td>
+                <td>7:00 AM</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -34,7 +34,7 @@
                 <td></td>
             </tr>
             <tr>
-                <td>8:15 AM<br>9:30 AM</td>
+                <td>8:15 AM</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -44,7 +44,7 @@
                 <td></td>
             </tr>
             <tr>
-                <td>9:30 AM<br>10:45 AM</td>
+                <td>9:30 AM</td>
                 <td>SS086</td>
                 <td></td>
                 <td>SS086</td>
@@ -54,49 +54,42 @@
                 <td></td>
             </tr>
             <tr>
-                <td>10:45 AM<br>12:00 PM</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>CS107</td>
-                <td>CS107L</td>
-                <td>EMC113L</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>12:00 PM<br>1:15 PM</td>
+                <td>10:45 AM</td>
                 <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
+                <td rowspan="3">CS107L</td>
+                <td rowspan="3">EMC113L</td>
                 <td></td>
             </tr>
             <tr>
-                <td>1:15 PM<br>2:30 PM</td>
+                <td>12:00 PM</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>1:15 PM</td>
                 <td>HUM039</td>
                 <td></td>
                 <td>HUM039</td>
-                <td>CS107</td>
-                <td>IT107L</td>
-                <td>EMC112L</td>
+                <td rowspan="2">CS107</td>
                 <td></td>
             </tr>
             <tr>
-                <td>2:30 PM<br>3:45 PM</td>
+                <td>2:30 PM</td>
                 <td></td>
                 <td></td>
                 <td></td>
-                <td>IT103</td>
-                <td>IT103L</td>
-                <td></td>
+                <td rowspan="3">IT103L</td>
+                <td rowspan="3">EMC112L</td>
                 <td></td>
             </tr>
             <tr>
-                <td>3:45 PM<br>5:00 PM</td>
-                <td></td>
-                <td></td>
+                <td>3:45 PM</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -104,9 +97,24 @@
                 <td></td>
             </tr>
             <tr>
-                <td>5:00 PM<br>6:15 PM</td>
-                <td>EMC112</td>
-                <td>EMC113</td>
+                <td>5:00 PM</td>
+                <td rowspan="2">EMC112</td>
+                <td rowspan="2">EMC113</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>6:15 PM</td>
+                <td></td>
+                <td rowspan="2">IT103</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>7:30 PM</td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -114,17 +122,7 @@
                 <td></td>
             </tr>
             <tr>
-                <td>6:15 PM<br>7:30 PM</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>IT103</td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>7:30 PM<br>8:45 PM</td>
+                <td>8:45 PM</td>
                 <td></td>
                 <td></td>
                 <td></td>
