--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My First Web Page</title>
 </head>
 <body>
-    <h1>Hi! I am Vern Dayoc</h1>
+    <h1>Hi! I am Rico Vern Dayoc</h1>
     <h2>HTML Tasks</h2>
     <p>&emsp; <a href="DayocExplorePHTours.html">1. Explore PH Tours</a></p>
     <p>&emsp; <a href="DayocCourseSchedule.html">2. 2nd Term Course Schedule</a></p>
