CountUp and ToDoList Acts

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h2>HTML Tasks</h2>
     <p>&emsp; <a href="DayocExplorePHTours.html">1. Explore PH Tours</a></p>
     <p>&emsp; <a href="DayocCourseSchedule.html">2. 2nd Term Course Schedule</a></p>
+    <p>&emsp; <a href="CountUp.html">3. Simple Count Up</a></p>
+    <p>&emsp; <a href="ToDoList.html">4. To-Do List</a></p>
 </body>
 </html>
