--- a/DayocExplorePHTours.html
+++ b/DayocExplorePHTours.html
@@ -22,6 +22,7 @@
         <a href="promos.html">Promos</a>
         <a href="packages.html">Packages</a>
         <a href="contact.html">Contact</a>
+        <a href="Dayoc_Portfolio/index.html">Contact</a>
         
     </nav>
 
