--- a/Dayoc_Portfolio/index.html
+++ b/Dayoc_Portfolio/index.html
@@ -31,7 +31,7 @@
         <section id="about">
             <div class="container">
                 <h2>About Me</h2>
-                <p>Hello! I'm Rico Dayoc, a passionate web and game developer. I specialize in creating immersive
+                <p>Hello! I'm Rico Dayoc, a passionate game developer. I specialize in creating immersive
                     experiences and developing creative solutions for both web and gaming platforms. With a strong
                     foundation in coding and design, I strive to make every project unique and engaging.</p>
             </div>
