--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <p>&emsp; <a href="DayocCourseSchedule.html">2. 2nd Term Course Schedule</a></p>
     <p>&emsp; <a href="CountUp.html">3. Simple Count Up</a></p>
     <p>&emsp; <a href="ToDoList.html">4. To-Do List</a></p>
+    <p>&emsp; <a href="Dayoc_Portfolio/index.html">4. Portfolio</a></p>
 </body>
 </html>
