--- a/Dayoc_Portfolio/index.html
+++ b/Dayoc_Portfolio/index.html
@@ -13,7 +13,6 @@
     <header>
         <div class="container">
             <h1>Rico Dayoc</h1>
-            <p>Entertainment Multimedia Computing | Game Developer</p>
         </div>
     </header>
 
@@ -30,10 +29,8 @@
     <main>
         <section id="about">
             <div class="container">
-                <h2>About Me</h2>
-                <p>Hello! I'm Rico Dayoc, a passionate game developer. I specialize in creating immersive
-                    experiences and developing creative solutions for both web and gaming platforms. With a strong
-                    foundation in coding and design, I strive to make every project unique and engaging.</p>
+                <h2>About</h2>
+                <p>Hello! I'm Rico Dayoc, I showcase my skills by creating webpages through my projects and assignments. One of the highlights is the games I’ve made. When I started, I had no idea where to begin, but with guidance and self-learning, I was able to figure out how to create a game. Earning my certificate boosted my confidence and reassured me that I’m making progress in my program, with room to grow. I’m also showcasing my knowledge through this portfolio, with its intuitive navigation, design, and animation.</p>
             </div>
         </section>
 
@@ -42,15 +39,58 @@
                 <h2>Key Projects</h2>
                 <div class="project">
                     <h3>Game Development</h3>
-                    <p>Developed a game in Unity with a heart-based HP system and immersive audio design. Check out my
+                    <video controls>
+                        <source src="Videos/PreviewFirstGame.mp4" type="video/mp4">
+                    </video>
+                    <p>Developed a game in Unity focusing on its combat mechanics, and smoothing out the animations. Check out my
                         GitHub for more.</p>
                 </div>
+                <section id="socials">
+                    <div>
+                        <a href="https://github.com/FernyPack/First-Game">
+                            <div class="button-icon">
+                                <div class="icon">
+                                    <svg viewBox="0 0 24 24">
+                                        <path
+                                            d="M12 0.296997C5.37 0.296997 0 5.67 0 12.297C0 17.6 3.438 22.097 8.205 23.682C8.805 23.795 9.025 23.424 9.025 23.105C9.025 22.82 9.015 22.065 9.01 21.065C5.672 21.789 4.968 19.455 4.968 19.455C4.422 18.07 3.633 17.7 3.633 17.7C2.546 16.956 3.717 16.971 3.717 16.971C4.922 17.055 5.555 18.207 5.555 18.207C6.625 20.042 8.364 19.512 9.05 19.205C9.158 18.429 9.467 17.9 9.81 17.6C7.145 17.3 4.344 16.268 4.344 11.67C4.344 10.36 4.809 9.29 5.579 8.45C5.444 8.147 5.039 6.927 5.684 5.274C5.684 5.274 6.689 4.952 8.984 6.504C9.944 6.237 10.964 6.105 11.984 6.099C13.004 6.105 14.024 6.237 14.984 6.504C17.264 4.952 18.269 5.274 18.269 5.274C18.914 6.927 18.509 8.147 18.389 8.45C19.154 9.29 19.619 10.36 19.619 11.67C19.619 16.28 16.814 17.295 14.144 17.59C14.564 17.95 14.954 18.686 14.954 19.81C14.954 21.416 14.939 22.706 14.939 23.096C14.939 23.411 15.149 23.786 15.764 23.666C20.565 22.092 24 17.592 24 12.297C24 5.67 18.627 0.296997 12 0.296997Z"
+                                            fill="#222229"></path>
+                                    </svg>
+                                </div>
+                                <div class="cube">
+                                    <span class="side front">hover me</span>
+                                    <span class="side top">check it on github</span>
+                                </div>
+                            </div>
+                        </a>
+                </section>
+
+
                 <div class="project">
                     <h3>Web Development</h3>
+                    <img src="Pictures/Screenshot 2025-02-03 220122.png" alt="projs" width="400">
                     <p>Built responsive websites using HTML, CSS, and JavaScript. Experience in creating user-friendly
-                        interfaces and custom solutions.</p>
+                        interfaces.</p>
                 </div>
             </div>
+
+            <section id="socials">
+                <div class="container">
+                    <a href="https://fernypack.github.io/DayocExplorePHTours.html">
+                        <div class="button-icon">
+                            <div class="icon">
+                                <svg viewBox="0 0 24 24">
+                                    <path
+                                        d="M12 0.296997C5.37 0.296997 0 5.67 0 12.297C0 17.6 3.438 22.097 8.205 23.682C8.805 23.795 9.025 23.424 9.025 23.105C9.025 22.82 9.015 22.065 9.01 21.065C5.672 21.789 4.968 19.455 4.968 19.455C4.422 18.07 3.633 17.7 3.633 17.7C2.546 16.956 3.717 16.971 3.717 16.971C4.922 17.055 5.555 18.207 5.555 18.207C6.625 20.042 8.364 19.512 9.05 19.205C9.158 18.429 9.467 17.9 9.81 17.6C7.145 17.3 4.344 16.268 4.344 11.67C4.344 10.36 4.809 9.29 5.579 8.45C5.444 8.147 5.039 6.927 5.684 5.274C5.684 5.274 6.689 4.952 8.984 6.504C9.944 6.237 10.964 6.105 11.984 6.099C13.004 6.105 14.024 6.237 14.984 6.504C17.264 4.952 18.269 5.274 18.269 5.274C18.914 6.927 18.509 8.147 18.389 8.45C19.154 9.29 19.619 10.36 19.619 11.67C19.619 16.28 16.814 17.295 14.144 17.59C14.564 17.95 14.954 18.686 14.954 19.81C14.954 21.416 14.939 22.706 14.939 23.096C14.939 23.411 15.149 23.786 15.764 23.666C20.565 22.092 24 17.592 24 12.297C24 5.67 18.627 0.296997 12 0.296997Z"
+                                        fill="#222229"></path>
+                                </svg>
+                            </div>
+                            <div class="cube">
+                                <span class="side front">hover me</span>
+                                <span class="side top">check it on github</span>
+                            </div>
+                        </div>
+                    </a>
+            </section>
         </section>
 
         <section id="awards">
@@ -62,38 +102,59 @@
                     <p>Received for winning the CCIS Week Quiz Bowl.</p>
                 </div>
             </div>
-        </section>
 
+        </section>
         <section id="assignments">
             <div class="container">
                 <h2>Assignments</h2>
                 <div class="assignment">
-                    <h3>Database Management System</h3>
-                    <p>Designed and implemented a database solution for a local business to streamline its inventory
-                        system using MySQL.</p>
+                    <h3>JavaScript Count-Up Script and To-Do-List</h3>
+                    <img class="image" src="Pictures/Screenshot 2025-02-03 231614.png">
+                    <img class="image" src="Pictures/Screenshot 2025-02-03 231650.png">
+                    <p>Tasked to do scripts for our webpage.</p>
                 </div>
+                <section id="socials">
+                    <div>
+                        <a href="https://github.com/FernyPack/FernyPack.github.io">
+                            <div class="button-icon">
+                                <div class="icon">
+                                    <svg viewBox="0 0 24 24">
+                                        <path
+                                            d="M12 0.296997C5.37 0.296997 0 5.67 0 12.297C0 17.6 3.438 22.097 8.205 23.682C8.805 23.795 9.025 23.424 9.025 23.105C9.025 22.82 9.015 22.065 9.01 21.065C5.672 21.789 4.968 19.455 4.968 19.455C4.422 18.07 3.633 17.7 3.633 17.7C2.546 16.956 3.717 16.971 3.717 16.971C4.922 17.055 5.555 18.207 5.555 18.207C6.625 20.042 8.364 19.512 9.05 19.205C9.158 18.429 9.467 17.9 9.81 17.6C7.145 17.3 4.344 16.268 4.344 11.67C4.344 10.36 4.809 9.29 5.579 8.45C5.444 8.147 5.039 6.927 5.684 5.274C5.684 5.274 6.689 4.952 8.984 6.504C9.944 6.237 10.964 6.105 11.984 6.099C13.004 6.105 14.024 6.237 14.984 6.504C17.264 4.952 18.269 5.274 18.269 5.274C18.914 6.927 18.509 8.147 18.389 8.45C19.154 9.29 19.619 10.36 19.619 11.67C19.619 16.28 16.814 17.295 14.144 17.59C14.564 17.95 14.954 18.686 14.954 19.81C14.954 21.416 14.939 22.706 14.939 23.096C14.939 23.411 15.149 23.786 15.764 23.666C20.565 22.092 24 17.592 24 12.297C24 5.67 18.627 0.296997 12 0.296997Z"
+                                            fill="#222229"></path>
+                                    </svg>
+                                </div>
+                                <div class="cube">
+                                    <span class="side front">hover me</span>
+                                    <span class="side top">check it on github</span>
+                                </div>
+                            </div>
+                        </a>
+                </section>
+
                 <div class="assignment">
-                    <h3>Game Mechanics Design</h3>
-                    <p>Created a detailed game design document for an RPG game, including mechanics, character
-                        progression, and combat systems.</p>
+                    <h3>2D Game Design</h3>
+                    <img class="image" src="Pictures/Screenshot 2025-02-03 230616.png">
+                    <p>Created a 2D game design, focusing on its mechanics, and health systems.</p>
                 </div>
             </div>
             <section id="socials">
                 <div class="container">
-                    <div class="button-icon">
-                        <div class="icon">
-                            <a href="https://github.com/FernyPack/FernyPack.github.io" a>
+                    <a href="https://github.com/FernyPack/FernyPack.github.io">
+                        <div class="button-icon">
+                            <div class="icon">
                                 <svg viewBox="0 0 24 24">
                                     <path
                                         d="M12 0.296997C5.37 0.296997 0 5.67 0 12.297C0 17.6 3.438 22.097 8.205 23.682C8.805 23.795 9.025 23.424 9.025 23.105C9.025 22.82 9.015 22.065 9.01 21.065C5.672 21.789 4.968 19.455 4.968 19.455C4.422 18.07 3.633 17.7 3.633 17.7C2.546 16.956 3.717 16.971 3.717 16.971C4.922 17.055 5.555 18.207 5.555 18.207C6.625 20.042 8.364 19.512 9.05 19.205C9.158 18.429 9.467 17.9 9.81 17.6C7.145 17.3 4.344 16.268 4.344 11.67C4.344 10.36 4.809 9.29 5.579 8.45C5.444 8.147 5.039 6.927 5.684 5.274C5.684 5.274 6.689 4.952 8.984 6.504C9.944 6.237 10.964 6.105 11.984 6.099C13.004 6.105 14.024 6.237 14.984 6.504C17.264 4.952 18.269 5.274 18.269 5.274C18.914 6.927 18.509 8.147 18.389 8.45C19.154 9.29 19.619 10.36 19.619 11.67C19.619 16.28 16.814 17.295 14.144 17.59C14.564 17.95 14.954 18.686 14.954 19.81C14.954 21.416 14.939 22.706 14.939 23.096C14.939 23.411 15.149 23.786 15.764 23.666C20.565 22.092 24 17.592 24 12.297C24 5.67 18.627 0.296997 12 0.296997Z"
                                         fill="#222229"></path>
                                 </svg>
+                            </div>
+                            <div class="cube">
+                                <span class="side front">hover me</span>
+                                <span class="side top">check it on github</span>
+                            </div>
                         </div>
-                        </a>
-                        <div class="cube">
-                            <span class="side front">hover me</span>
-                            <span class="side top">check it on github</span>
-                        </div>
+                    </a>
             </section>
         </section>
 
@@ -120,9 +181,6 @@
                     </a>
                 </section>
 
-
-
-
                 <div class="certification">
                     <h3>Start the UX Design Process: Empathize, Define, and Ideate</h3>
                     <img src="Pictures/CERTIFICATE_LANDING_PAGE~5HFCSV9NAT8P.jpeg" alt="Certifications" width="400">
@@ -140,8 +198,6 @@
                         </button>
                     </a>
                 </section>
-
-
             </div>
         </section>
     </main>
