--- a/Dayoc_Portfolio/index.html
+++ b/Dayoc_Portfolio/index.html
@@ -30,7 +30,7 @@
         <section id="about">
             <div class="container">
                 <h2>About</h2>
-                <p>Hello! I'm Rico Dayoc, I showcase my skills by creating webpages through my projects and assignments. One of the highlights is the games I’ve made. When I started, I had no idea where to begin, but with guidance and self-learning, I was able to figure out how to create a game. Earning my certificate boosted my confidence and reassured me that I’m making progress in my program, with room to grow. I’m also showcasing my knowledge through this portfolio, with its intuitive navigation, design, and animation.</p>
+                <p>I showcase my skills by creating webpages through various projects and assignments. One of the key highlights is the games I’ve made. When I first started, I had no idea where to even begin, and the learning curve seemed steep. However, through a mix of guidance, tutorials, and a lot of self-learning, I was able to figure out how to develop a game from scratch. This hands-on experience has taught me not only how to work with HTML, CSS, and JavaScript but also how to approach problem-solving in coding. Earning my certificate has been a big confidence booster, and it made me realize how much progress I've made in my program. It showed me that there’s still a lot more to learn and room to improve, which motivates me to keep going. My portfolio is a reflection of this growth, showcasing my knowledge and skills with an intuitive design, smooth navigation, and animations that make the user experience engaging. It’s more than just a collection of projects; it’s a way for me to demonstrate how far I’ve come and the direction I’m heading in my web development journey.</p>
             </div>
         </section>
 
