--- a/Dayoc_Portfolio/index.html
+++ b/Dayoc_Portfolio/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body id="section" class="parallax">
 
     <header>
         <div class="container">
@@ -67,7 +67,7 @@
 
                 <div class="project">
                     <h3>Web Development</h3>
-                    <img src="Pictures/Screenshot 2025-02-03 220122.png" alt="projs" width="400">
+                    <img class="image" src="Pictures/Screenshot 2025-02-03 220122.png" alt="projs">
                     <p>Built responsive websites using HTML, CSS, and JavaScript. Experience in creating user-friendly
                         interfaces.</p>
                 </div>
@@ -98,7 +98,7 @@
                 <h2>Award</h2>
                 <div class="award">
                     <h3>Quiz Bowl Champion</h3>
-                    <img src="Pictures/First Placer.jpg" alt="Quiz Bowl Champion" width="200">
+                    <img class="image" src="Pictures/First Placer.jpg" alt="Quiz Bowl Champion">
                     <p>Received for winning the CCIS Week Quiz Bowl.</p>
                 </div>
             </div>
@@ -163,7 +163,7 @@
                 <h2>Certifications</h2>
                 <div class="certification">
                     <h3>Game Design and Development 2: 2D Platformer</h3>
-                    <img src="Pictures/CERTIFICATE_LANDING_PAGE~2C3T9BZR3IQW.jpeg" alt="Certifications" width="400">
+                    <img class="image2" src="Pictures/CERTIFICATE_LANDING_PAGE~2C3T9BZR3IQW.jpeg" alt="Certifications">
                     <p>Completed the Game Design and Development 2: 2D Platformer certification in 2024, demonstrating
                         expertise in game
                         development.</p>
@@ -183,7 +183,7 @@
 
                 <div class="certification">
                     <h3>Start the UX Design Process: Empathize, Define, and Ideate</h3>
-                    <img src="Pictures/CERTIFICATE_LANDING_PAGE~5HFCSV9NAT8P.jpeg" alt="Certifications" width="400">
+                    <img class="image2" src="Pictures/CERTIFICATE_LANDING_PAGE~5HFCSV9NAT8P.jpeg" alt="Certifications">
                     <p>Earned certification for UX Design in 2024.</p>
                 </div>
 
@@ -201,6 +201,7 @@
             </div>
         </section>
     </main>
+    <script src="script.js"></script>
 </body>
 
 </html>
