--- a/Dayoc_Portfolio/index.html
+++ b/Dayoc_Portfolio/index.html
@@ -8,12 +8,23 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body id="section" class="parallax">
+<body class="parallax">
 
     <header>
-        <div class="container">
-            <h1>Rico Dayoc</h1>
+        <div id="cookieContainer">
+            <div id="counterDisplay">
+                Clicks: 0
+            </div>
+            <div id="cookieCounter">
+                Cookies Collected: 0
+            </div>
         </div>
+        <div class="container2">
+            <div class="card">
+                <div class="content">
+                    <h1>Rico Dayoc</h1>
+                </div>
+            </div>
     </header>
 
     <nav>
@@ -28,11 +39,26 @@
 
     <main>
         <section id="about">
+
             <div class="container">
                 <h2>About</h2>
-                <p>I showcase my skills through the projects and assignments I present in my portfolio. One of the key highlights is the games I’ve made. When I first started, I had no idea where to even begin, and the learning curve seemed steep. However, through a mix of guidance, tutorials, and a lot of self-learning, I was able to figure out how to develop a game from scratch. This hands-on experience has taught me not only how to work with HTML, CSS, and JavaScript but also how to approach problem-solving in coding. Earning my certificate has been a big confidence booster, and it made me realize how much progress I've made in my program. It showed me that there’s still a lot more to learn and room to improve, which motivates me to keep going. My portfolio is a reflection of this growth, showcasing my knowledge and skills with an intuitive design, smooth navigation, and animations that make the user experience engaging. It’s more than just a collection of projects; it’s a way for me to demonstrate how far I’ve come and the direction I’m heading in my web development journey.</p>
+                <p>I showcase my skills through the projects and assignments I present in my portfolio. One of the key
+                    highlights is the games I’ve made. When I first started, I had no idea where to even begin, and the
+                    learning curve seemed steep. However, through a mix of guidance, tutorials, and a lot of
+                    self-learning, I was able to figure out how to develop a game from scratch. This hands-on experience
+                    has taught me not only how to work with HTML, CSS, and JavaScript but also how to approach
+                    problem-solving in coding. Earning my certificate has been a big confidence booster, and it made me
+                    realize how much progress I've made in my program. It showed me that there’s still a lot more to
+                    learn and room to improve, which motivates me to keep going. My portfolio is a reflection of this
+                    growth, showcasing my knowledge and skills with an intuitive design, smooth navigation, and
+                    animations that make the user experience engaging. It’s more than just a collection of projects;
+                    it’s a way for me to demonstrate how far I’ve come and the direction I’m heading in my web
+                    development journey.</p>
             </div>
+
         </section>
+
+
 
         <section id="projects">
             <div class="container">
@@ -42,7 +68,8 @@
                     <video controls>
                         <source src="Videos/PreviewFirstGame.mp4" type="video/mp4">
                     </video>
-                    <p>Developed a game in Unity focusing on its combat mechanics, and smoothing out the animations. Check out my
+                    <p>Developed a game in Unity focusing on its combat mechanics, and smoothing out the animations.
+                        Check out my
                         GitHub for more.</p>
                 </div>
                 <section id="socials">
