--- a/Dayoc_Portfolio/index.html
+++ b/Dayoc_Portfolio/index.html
@@ -167,7 +167,7 @@
             </div>
             <section id="socials">
                 <div class="container">
-                    <a href="https://github.com/FernyPack/FernyPack.github.io">
+                    <a href="https://github.com/jcfpascua/Dino-Gang?fbclid=IwZXh0bgNhZW0CMTEAAR30ZbwOceEzj6QjBwuwysXxrr0u80MGrQQjkw26reCrQSuNA4eXRyvvi6k_aem_rWkobotOygo2kMGSkJRWNw">
                         <div class="button-icon">
                             <div class="icon">
                                 <svg viewBox="0 0 24 24">
