--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
     <h1>Hi! I am Rico Vern Dayoc</h1>
     <h2>HTML Tasks</h2>
-    <p>&emsp; <a href="DayocExplorePHTours.html">1. Explore PH Tours</a></p>
-    <p>&emsp; <a href="DayocCourseSchedule.html">2. 2nd Term Course Schedule</a></p>
-    <p>&emsp; <a href="CountUp.html">3. Simple Count Up</a></p>
-    <p>&emsp; <a href="ToDoList.html">4. To-Do List</a></p>
+    <p>&emsp; <a href="PHTours/DayocExplorePHTours.html">1. Explore PH Tours</a></p>
+    <p>&emsp; <a href="Dayoc_CourseSched/DayocCourseSchedule.html">2. 2nd Term Course Schedule</a></p>
+    <p>&emsp; <a href="Dayoc_CountUp/CountUp.html">3. Simple Count Up</a></p>
+    <p>&emsp; <a href="Dayoc_ToDoList/ToDoList.html">4. To-Do List</a></p>
     <p>&emsp; <a href="Dayoc_Portfolio/index.html">5. Portfolio</a></p>
 </body>
 </html>
