--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <p>&emsp; <a href="Dayoc_CountUp/CountUp.html">3. Simple Count Up</a></p>
     <p>&emsp; <a href="Dayoc_ToDoList/ToDoList.html">4. To-Do List</a></p>
     <p>&emsp; <a href="Dayoc_Portfolio/index.html">5. Portfolio</a></p>
+    <p>&emsp; <a href="Dayoc_W8 Hands-on Activity/">6. W8 Exercises</a></p>
 </body>
 </html>
