--- a/Dayoc_W8 Hands-on Activity/index.html
+++ b/Dayoc_W8 Hands-on Activity/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <h1>Week 8 Exercises</h1>
-    <p>&emsp; <a href="Exercise 1/index.html">1. Exercise 1</a></p>
-    <p>&emsp; <a href="Exercise 2/index.html">2. Exercise 2</a></p>    
-    <p>&emsp; <a href="Exercise 3/index.html">3. Exercise 3</a></p>  
-    <p>&emsp; <a href="Exercise 4/index.html">4. Exercise 4</a></p>
-    <p>&emsp; <a href="Exercise 5/index.html">5. Exercise 5</a></p>
-    <p>&emsp; <a href="Conclusion_Exercise/index.html">6. Exercise Conclusion</a></p>
+    <p>&emsp; <a href="Dayoc Exercise 1/index.html">1. Exercise 1</a></p>
+    <p>&emsp; <a href="Dayoc Exercise 2/index.html">2. Exercise 2</a></p>    
+    <p>&emsp; <a href="Dayoc Exercise 3/index.html">3. Exercise 3</a></p>  
+    <p>&emsp; <a href="Dayoc Exercise 4/index.html">4. Exercise 4</a></p>
+    <p>&emsp; <a href="Dayoc Exercise 5/index.html">5. Exercise 5</a></p>
+    <p>&emsp; <a href="Dayoc_Conclusion_Exercise/index.html">6. Exercise Conclusion</a></p>
 </body>
 </html>
