--- a/Dayoc_Portfolio/index.html
+++ b/Dayoc_Portfolio/index.html
@@ -73,36 +73,7 @@
                         GitHub for more.</p>
                 </div>
                 <section id="socials">
-                    <div>
-                        <a href="https://github.com/FernyPack/First-Game">
-                            <div class="button-icon">
-                                <div class="icon">
-                                    <svg viewBox="0 0 24 24">
-                                        <path
-                                            d="M12 0.296997C5.37 0.296997 0 5.67 0 12.297C0 17.6 3.438 22.097 8.205 23.682C8.805 23.795 9.025 23.424 9.025 23.105C9.025 22.82 9.015 22.065 9.01 21.065C5.672 21.789 4.968 19.455 4.968 19.455C4.422 18.07 3.633 17.7 3.633 17.7C2.546 16.956 3.717 16.971 3.717 16.971C4.922 17.055 5.555 18.207 5.555 18.207C6.625 20.042 8.364 19.512 9.05 19.205C9.158 18.429 9.467 17.9 9.81 17.6C7.145 17.3 4.344 16.268 4.344 11.67C4.344 10.36 4.809 9.29 5.579 8.45C5.444 8.147 5.039 6.927 5.684 5.274C5.684 5.274 6.689 4.952 8.984 6.504C9.944 6.237 10.964 6.105 11.984 6.099C13.004 6.105 14.024 6.237 14.984 6.504C17.264 4.952 18.269 5.274 18.269 5.274C18.914 6.927 18.509 8.147 18.389 8.45C19.154 9.29 19.619 10.36 19.619 11.67C19.619 16.28 16.814 17.295 14.144 17.59C14.564 17.95 14.954 18.686 14.954 19.81C14.954 21.416 14.939 22.706 14.939 23.096C14.939 23.411 15.149 23.786 15.764 23.666C20.565 22.092 24 17.592 24 12.297C24 5.67 18.627 0.296997 12 0.296997Z"
-                                            fill="#222229"></path>
-                                    </svg>
-                                </div>
-                                <div class="cube">
-                                    <span class="side front">hover me</span>
-                                    <span class="side top">check it on github</span>
-                                </div>
-                            </div>
-                        </a>
-                </section>
-
-
-                <div class="project">
-                    <h3>Web Development</h3>
-                    <img class="image" src="Pictures/Screenshot 2025-02-03 220122.png" alt="projs">
-                    <p>Built responsive websites using HTML, CSS, and JavaScript. Experience in creating user-friendly
-                        interfaces.</p>
-                </div>
-            </div>
-
-            <section id="socials">
-                <div class="container">
-                    <a href="https://fernypack.github.io/DayocExplorePHTours.html">
+                    <a href="https://github.com/FernyPack/First-Game">
                         <div class="button-icon">
                             <div class="icon">
                                 <svg viewBox="0 0 24 24">
@@ -117,7 +88,76 @@
                             </div>
                         </div>
                     </a>
-            </section>
+                </section>
+
+
+
+                <div class="project">
+                    <h3>Web Development</h3>
+                    <img class="image" src="Pictures/Screenshot 2025-02-03 220122.png" alt="projs">
+                    <p>Built responsive websites using HTML, CSS, and JavaScript. Experience in creating user-friendly
+                        interfaces.</p>
+                </div>
+                <section id="socials">
+                    <a href="https://github.com/FernyPack/FernyPack.github.io/tree/main/Dayoc_PHTours">
+                        <div class="button-icon">
+                            <div class="icon">
+                                <svg viewBox="0 0 24 24">
+                                    <path
+                                        d="M12 0.296997C5.37 0.296997 0 5.67 0 12.297C0 17.6 3.438 22.097 8.205 23.682C8.805 23.795 9.025 23.424 9.025 23.105C9.025 22.82 9.015 22.065 9.01 21.065C5.672 21.789 4.968 19.455 4.968 19.455C4.422 18.07 3.633 17.7 3.633 17.7C2.546 16.956 3.717 16.971 3.717 16.971C4.922 17.055 5.555 18.207 5.555 18.207C6.625 20.042 8.364 19.512 9.05 19.205C9.158 18.429 9.467 17.9 9.81 17.6C7.145 17.3 4.344 16.268 4.344 11.67C4.344 10.36 4.809 9.29 5.579 8.45C5.444 8.147 5.039 6.927 5.684 5.274C5.684 5.274 6.689 4.952 8.984 6.504C9.944 6.237 10.964 6.105 11.984 6.099C13.004 6.105 14.024 6.237 14.984 6.504C17.264 4.952 18.269 5.274 18.269 5.274C18.914 6.927 18.509 8.147 18.389 8.45C19.154 9.29 19.619 10.36 19.619 11.67C19.619 16.28 16.814 17.295 14.144 17.59C14.564 17.95 14.954 18.686 14.954 19.81C14.954 21.416 14.939 22.706 14.939 23.096C14.939 23.411 15.149 23.786 15.764 23.666C20.565 22.092 24 17.592 24 12.297C24 5.67 18.627 0.296997 12 0.296997Z"
+                                        fill="#222229"></path>
+                                </svg>
+                            </div>
+                            <div class="cube">
+                                <span class="side front">hover me</span>
+                                <span class="side top">check it on github</span>
+                            </div>
+                        </div>
+                    </a>
+                </section>
+                <div class="project">
+                    <h3>Pokémon Team Builder Web App</h3>
+                    <img class="image" src="Pictures/PokemonWebApp.jpg" alt="projs">
+
+                    <p>The Pokémon Team Builder Web App helps players create balanced and competitive Pokémon teams. It
+                        simplifies team-building by analyzing type matchups and team synergy.</p>
+
+                    <p>This app is designed to assist both casual and competitive Pokémon players in optimizing their
+                        teams. It provides an easy-to-use interface where users can search for Pokémon, view their
+                        stats, and adjust their team composition based on weaknesses and strengths.</p>
+
+                    <div>
+
+                        <li>Search for Pokémon and view their stats</li>
+                        <li>Save and manage multiple Pokémon teams</li>
+                        <li>Connects with PokéAPI for real-time Pokémon data</li>
+
+                    </div>
+                </div>
+
+                <section id="socials">
+                    <a href="https://github.com/jcfpascua/pokemon-team-builder">
+                        <div class="button-icon">
+                            <div class="icon">
+                                <svg viewBox="0 0 24 24">
+                                    <path
+                                        d="M12 0.296997C5.37 0.296997 0 5.67 0 12.297C0 17.6 3.438 22.097 8.205 23.682C8.805 23.795 9.025 23.424 9.025 23.105C9.025 22.82 9.015 22.065 9.01 21.065C5.672 21.789 4.968 19.455 4.968 19.455C4.422 18.07 3.633 17.7 3.633 17.7C2.546 16.956 3.717 16.971 3.717 16.971C4.922 17.055 5.555 18.207 5.555 18.207C6.625 20.042 8.364 19.512 9.05 19.205C9.158 18.429 9.467 17.9 9.81 17.6C7.145 17.3 4.344 16.268 4.344 11.67C4.344 10.36 4.809 9.29 5.579 8.45C5.444 8.147 5.039 6.927 5.684 5.274C5.684 5.274 6.689 4.952 8.984 6.504C9.944 6.237 10.964 6.105 11.984 6.099C13.004 6.105 14.024 6.237 14.984 6.504C17.264 4.952 18.269 5.274 18.269 5.274C18.914 6.927 18.509 8.147 18.389 8.45C19.154 9.29 19.619 10.36 19.619 11.67C19.619 16.28 16.814 17.295 14.144 17.59C14.564 17.95 14.954 18.686 14.954 19.81C14.954 21.416 14.939 22.706 14.939 23.096C14.939 23.411 15.149 23.786 15.764 23.666C20.565 22.092 24 17.592 24 12.297C24 5.67 18.627 0.296997 12 0.296997Z"
+                                        fill="#222229"></path>
+                                </svg>
+                            </div>
+                            <div class="cube">
+                                <span class="side front">hover me</span>
+                                <span class="side top">check it on github</span>
+                            </div>
+                        </div>
+                    </a>
+                </section>
+            </div>
+
+
+
+
+
         </section>
 
         <section id="awards">
@@ -167,7 +207,8 @@
             </div>
             <section id="socials">
                 <div class="container">
-                    <a href="https://github.com/jcfpascua/Dino-Gang?fbclid=IwZXh0bgNhZW0CMTEAAR30ZbwOceEzj6QjBwuwysXxrr0u80MGrQQjkw26reCrQSuNA4eXRyvvi6k_aem_rWkobotOygo2kMGSkJRWNw">
+                    <a
+                        href="https://github.com/jcfpascua/Dino-Gang?fbclid=IwZXh0bgNhZW0CMTEAAR30ZbwOceEzj6QjBwuwysXxrr0u80MGrQQjkw26reCrQSuNA4eXRyvvi6k_aem_rWkobotOygo2kMGSkJRWNw">
                         <div class="button-icon">
                             <div class="icon">
                                 <svg viewBox="0 0 24 24">
